# ROTEX

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Force_code.c  README.md  wireless_transfer.py
include/: Pico_BNO08x.h  lwipopts.h  sh2.h  sh2M.h  sh2_SensorValue.h  sh2_hal.h  sh2_util.h  shtp.h  wireless_transfer.h
scripts/: IMU_Data_Collector.py
src/: 3IMUmain.c  CMakeLists.txt  Pico_BNO08x_multi.c  force_code.c  force_code_python_csv.py  main.c  sample_IMU_data.csv  sh2.c  sh2M.c  sh2_SensorValue.c  sh2_util.c  wireless_transfer.c
